--- a/Scripts/week5.html
+++ b/Scripts/week5.html
@@ -25,6 +25,43 @@
         </ul>
     </nav>
 
+    <img src="/Images/week9.png" alt= " most common events " >
+
+    <p>This example uses the addEventListener() method to attach a "mouseover" and "mouseout" event to a h1 element.</p>
+
+<h1 id="demo">Mouse over me</h1>
+
+<script>
+document.getElementById("demo").addEventListener("mouseover", mouseOver);
+document.getElementById("demo").addEventListener("mouseout", mouseOut);
+
+function mouseOver() {
+  document.getElementById("demo").style.color = "red";
+}
+
+function mouseOut() {
+  document.getElementById("demo").style.color = "black";
+}
+</script>
+
+
+<img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="/Images/week9.png" alt="Smiley" width="32" height="32">
+
+<p>The function bigImg() is triggered when the user moves the mouse pointer over the image.</p>
+<p>The function normalImg() is triggered when the mouse pointer is moved out of the image.</p>
+
+<script>
+function bigImg(x) {
+  x.style.height = "64px";
+  x.style.width = "64px";
+}
+
+function normalImg(x) {
+  x.style.height = "32px";
+  x.style.width = "32px";
+}
+</script>
+
     </main>
     
 </body>
