--- a/Scripts/week5.html
+++ b/Scripts/week5.html
@@ -53,8 +53,8 @@ function mouseOut() {
 </nav>
 <script>
 function bigImg(x) {
-  x.style.height = "64px";
-  x.style.width = "64px";
+  x.style.height = "120px";
+  x.style.width = "120px";
 }
 
 function normalImg(x) {
@@ -68,8 +68,8 @@ function normalImg(x) {
 <p>This example uses the addEventListener() method to attach a "canplay" event to a video element.</p>
 
 <video controls id="myVideo">
-  <source src="mov_bbb.mp4" type="video/mp4">
-  <source src="mov_bbb.ogg" type="video/ogg">
+  <source src="/Images/mov_bbb.mp4" type="video/mp4">
+  <source src="/Images/mov_bbb.mp4" type="video/ogg">
   Your browser does not support HTML5 video.
 </video>
 
