--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Laura Gibbs</title>
+    <link rel="stylesheet" href="/Styles/lesson5.css">
 </head>
 <header>
     <h1> Laura Gibbs</h1>
@@ -12,12 +13,14 @@
 
 </header>
 <body>
+    <main>
 
     <nav>
         <ul>
            <li><a href="/Scripts/index.html"> <bold>CIT 261 Mobile Application Development</bold></a></li>
         </ul>
     </nav>
+    </main>
     
 </body>
 </html>
