--- a/Scripts/week5.html
+++ b/Scripts/week5.html
@@ -25,6 +25,10 @@
         </ul>
     </nav>
 
+    <h3>HTML DOM addEventListener() Method</h3>
+
+    <img src="/Images/week9.png" alt= " most common events " >
+    <img src="/Images/week9.png" alt= " most common events " >
     <img src="/Images/week9.png" alt= " most common events " >
 
     <p>This example uses the addEventListener() method to attach a "mouseover" and "mouseout" event to a h1 element.</p>
