--- a/CIT 261/Scripts/week3.html
+++ b/CIT 261/Scripts/week3.html
@@ -22,7 +22,7 @@
         <li>The animation element should be created with <bold>style= "position: absolute".</bold></li>
     </ul>
 
-    <img src="/Images/codeAnimation.png" alt=" JavaScript Code Animation" width="350" height="350">
+    <img src="/CIT 261/Images/codeAnimation.png" alt=" JavaScript Code Animation" width="350" height="350">
 
 
 <p><button onclick="myMove()">Click Me</button></p> 
