--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Laura Gibbs</title>
-    <link rel="stylesheet" href="/Styles/lesson5.css">
+    <link rel="stylesheet" href="/Styles/Styles.css">
+    <img src="/Images/JS_CSS.png" alt=" CIT 261 Logo" width="125" height="125">
 </head>
 <header>
     <h1> Laura Gibbs</h1>
@@ -17,7 +18,8 @@
 
     <nav>
         <ul>
-           <li><a href="/Scripts/index.html"> <bold>CIT 261 Mobile Application Development</bold></a></li>
+           <li><a href="/CIT 261/Scripts/index.html"> <bold>CIT 261 Mobile Application Development</bold></a></li>
+           <li><a href="/CS 308/Scripts/index.html"> <bold>CS 308 Technical Communication</bold></a></li>
         </ul>
     </nav>
     </main>
