--- a/CIT 261/Scripts/week4.html
+++ b/CIT 261/Scripts/week4.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="/Styles/lesson5.css">
+    <link rel="stylesheet" href="/CIT 261/Styles/lesson5.css">
 
     <style>
             #myDIV2{
