--- a/CIT 261/Scripts/week5.html
+++ b/CIT 261/Scripts/week5.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Laura Gibbs</title>
-    <link rel="stylesheet" href="/Styles/lesson5.css">
+    <link rel="stylesheet" href="/CIT 261/Styles/lesson5.css">
 
 </head>
 <header>
@@ -27,13 +27,13 @@
 
    
 
-    <img src="/Images/week9.png" alt= " most common events " >
+    <img src="/CIT 261/Images/week9.png" alt= " most common events " >
 
     <h3>HTML DOM addEventListener() Method</h3>
-    <img src="/Images/EventSyntax.png" alt= " most common events " > 
+    <img src="/CIT 261/Images/EventSyntax.png" alt= " most common events " > 
     <br> <br>
 
-    <img src="/Images/eventListener.png" alt= " most common events " >
+    <img src="/CIT 261/Images/eventListener.png" alt= " most common events " >
 
     <p>This example uses the addEventListener() method to attach a "mouseover" and "mouseout" event to a h1 element.</p>
 
@@ -57,7 +57,7 @@ function mouseOut() {
 
 
 
-<img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="2" src="/Images/minnie.gif" alt="Smiley" width="300" height="300">
+<img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="2" src="/CIT 261/Images/minnie.gif" alt="Smiley" width="300" height="300">
 
 <nav>
 <p>The function bigImg() is triggered when the user moves the mouse pointer over the image.</p>
@@ -93,8 +93,8 @@ function normalImg(x) {
 <p>This example uses the addEventListener() method to attach a "canplay" event to a video element.</p>
 
 <video controls id="myVideo">
-  <source src="/Images/mov_bbb.mp4" type="video/mp4">
-  <source src="/Images/mov_bbb.mp4" type="video/ogg">
+  <source src="/CIT 261/Images/mov_bbb.mp4" type="video/mp4">
+  <source src="/CIT 261/Images/mov_bbb.mp4" type="video/ogg">
   Your browser does not support HTML5 video.
 </video>
 
