--- a/CIT 261/Scripts/index.html
+++ b/CIT 261/Scripts/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
+
+
+
     <header>
         <!-- Custom style for this site -->
     <link href="/CIT 261/Styles/lesson5.css" rel="stylesheet">
@@ -15,9 +17,21 @@
         <h1> CIT 261 Mobile Application Development</h1>
     </header>
 
+    <nav >
+            <ul class="navigation">
+                <li class="menu1"><a href="index.html">Home</a></li>
+                <li class="active"><a href="/CIT 261/Scripts/index.html">Mobile Application Development</a>   
+                <li class="menu4"><a href="/CS 308/Scripts/index.html">Technical Communication</a> 
+                <li class="menu4"><a href="/Scripts/contact.html">Contact</a>     
+                             
+    </ul>      
+        </nav>
+
+    <body>
+
     <nav>
-        <ul>
-            <br><br> <br><br>
+        <ul class=" weeks">
+            <br>
             <li><a href="/CIT 261/Presentations/CIT 261 Week 2 (Object Creation Functions, Inheritance, Properties, Methods, Instantiation).pdf"> Week 2: JavaScript Objects</a></li>
             <br>
             <ul>
