--- a/Scripts/contact.html
+++ b/Scripts/contact.html
@@ -22,8 +22,8 @@
             <ul class="navigation">
                 <li class="menu1"><a href="index.html">Home</a></li>
                 <li class="menu2"><a href="/CIT 261/Scripts/index.html">Mobile Application Development</a>   
-                <li class="menu4"><a href="/CS 308/Scripts/index.html">Technical Communication</a> 
-                <li class="menu4"><a href="/index.html">Contact</a>     
+                <li class="menu3"><a href="/CS 308/Scripts/index.html">Technical Communication</a> 
+                <li class="active"><a href="/Scripts/contact.html">Contact</a>     
                              
     </ul>      
         </nav>
