--- a/CIT 261/Scripts/index.html
+++ b/CIT 261/Scripts/index.html
@@ -19,7 +19,7 @@
 
     <nav >
             <ul class="navigation">
-                <li class="menu1"><a href="index.html">Home</a></li>
+                <li class="menu1"><a href="/index.html">Home</a></li>
                 <li class="active"><a href="/CIT 261/Scripts/index.html">Mobile Application Development</a>   
                 <li class="menu4"><a href="/CS 308/Scripts/index.html">Technical Communication</a> 
                 <li class="menu4"><a href="/Scripts/contact.html">Contact</a>     
@@ -93,7 +93,7 @@
                 <li>Remove Child</li>
             </ul>
             <br>
-            <li><a href="/CIT 261/Scripts/week9.html">Week 10: CSS3 Transitions <a></li>
+            <li><a href="/CIT 261/Scripts/week10.html">Week 10: CSS3 Transitions <a></li>
                 <br>
                 <ul>
                     <li>JSON Parse</li>
