--- a/Scripts/contact.html
+++ b/Scripts/contact.html
@@ -20,7 +20,7 @@
 
     <nav>
             <ul class="navigation">
-                <li class="menu1"><a href="index.html">Home</a></li>
+                <li class="menu1"><a href="/index.html">Home</a></li>
                 <li class="menu2"><a href="/CIT 261/Scripts/index.html">Mobile Application Development</a>   
                 <li class="menu3"><a href="/CS 308/Scripts/index.html">Technical Communication</a> 
                 <li class="active"><a href="/Scripts/contact.html">Contact</a>     
