--- a/CIT 261/Scripts/week5.html
+++ b/CIT 261/Scripts/week5.html
@@ -8,9 +8,20 @@
 
 </head>
 <header>
+    <img src="/CIT 261/Images/JS_CSS.png" alt=" Profile Picture" width="125" height="125">
     <h1> JavaScript Events</h1>
 
 </header>
+
+<nav>
+    <ul class="navigation">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li class="menu2"><a href="/CIT 261/Scripts/index.html">Mobile Application Development</a>   
+        <li class="menu3"><a href="/CS 308/Scripts/index.html">Technical Communication</a> 
+        <li class="menu4"><a href="/Scripts/contact.html">Contact</a>     
+                     
+</ul>      
+</nav>
 <body>
     <main>
     <h2>HTML Events</h2>
