--- a/CIT 261/Scripts/index.html
+++ b/CIT 261/Scripts/index.html
@@ -17,12 +17,14 @@
         <h1> CIT 261 Mobile Application Development</h1>
     </header>
 
-    <nav >
+    <nav>
             <ul class="navigation">
                 <li class="menu1"><a href="/index.html">Home</a></li>
                 <li class="active"><a href="/CIT 261/Scripts/index.html">Mobile Application Development</a>   
-                <li class="menu4"><a href="/CS 308/Scripts/index.html">Technical Communication</a> 
-                <li class="menu4"><a href="/Scripts/contact.html">Contact</a>     
+                <li class="menu3"><a href="/Documents/resume.html">Resume</a> 
+                    <li class="menu4"><a href="/Scripts/courses.html">Courses</a> 
+                    <li class="menu5"><a href="/Pictures">Gallery</a>     
+                <li class="menu6"><a href="/Scripts/contact.html">Contact</a>     
                              
     </ul>      
         </nav>
