--- a/Documents/resume.html
+++ b/Documents/resume.html
@@ -33,7 +33,9 @@
         
       <main>
 
-            <div>My name is Laura Gibbs. I am a current student </div>
+            <div class="images">
+                    <div class = "picture"><img src="/CIT 261/Images/codeAnimation.png 261" alt="Montana Image 1">
+                    </div>
 
     
 </main>
