--- a/CIT 261/Scripts/week3.html
+++ b/CIT 261/Scripts/week3.html
@@ -17,13 +17,15 @@
     
     <nav>
         <ul class="navigation">
-            <li class="active"><a href="/index.html">Home</a></li>
-            <li class="menu2"><a href="/CIT 261/Scripts/index.html">Mobile Application Development</a>   
-            <li class="menu3"><a href="/CS 308/Scripts/index.html">Technical Communication</a> 
-            <li class="menu4"><a href="/Scripts/contact.html">Contact</a>     
+            <li class="menu1"><a href="/index.html">Home</a></li>
+            <li class="active"><a href="/CIT 261/Scripts/index.html">Mobile Application Development</a>   
+            <li class="menu3"><a href="/Scripts/resume.html">Resume</a> 
+            <li class="menu4"><a href="/Scripts/courses.html">Courses</a> 
+            <li class="menu5"><a href="/Scripts/Gallery.html">Gallery</a>     
+            <li class="menu6"><a href="/Scripts/contact.html">Contact</a>     
                          
-    </ul>      
-    </nav>
+        </ul>      
+</nav>
 <style>
 #container {
   width: 400px;
