--- a/Scripts/contact.html
+++ b/Scripts/contact.html
@@ -20,7 +20,7 @@
             <ul class="navigation">
                 <li class="menu1"><a href="/index.html">Home</a></li>
                 <li class="menu2"><a href="/CIT 261/Scripts/index.html">Mobile Application Development</a>   
-                <li class="menu3"><a href="/Documents/resume.html">Resume</a> 
+                <li class="menu3"><a href="/Scripts/resume.html">Resume</a> 
                 <li class="menu4"><a href="/Scripts/courses.html">Courses</a> 
                 <li class="menu5"><a href="/Scripts/Gallery.html">Gallery</a>     
                 <li class="active"><a href="/Scripts/contact.html">Contact</a>     
