--- a/CIT 261/Scripts/index.html
+++ b/CIT 261/Scripts/index.html
@@ -21,13 +21,13 @@
             <ul class="navigation">
                 <li class="menu1"><a href="/index.html">Home</a></li>
                 <li class="active"><a href="/CIT 261/Scripts/index.html">Mobile Application Development</a>   
-                <li class="menu3"><a href="/Documents/resume.html">Resume</a> 
-                    <li class="menu4"><a href="/Scripts/courses.html">Courses</a> 
-                    <li class="menu5"><a href="/Pictures">Gallery</a>     
+                <li class="menu3"><a href="/Scripts/resume.html">Resume</a> 
+                <li class="menu4"><a href="/Scripts/courses.html">Courses</a> 
+                <li class="menu5"><a href="/Scripts/Gallery.html">Gallery</a>     
                 <li class="menu6"><a href="/Scripts/contact.html">Contact</a>     
                              
-    </ul>      
-        </nav>
+            </ul>      
+    </nav>
 
     <body>
 
