--- a/CIT 261/Scripts/index.html
+++ b/CIT 261/Scripts/index.html
@@ -34,7 +34,7 @@
     <nav>
         <ul class=" weeks">
             <br>
-            <li><a href="/CIT 261/Presentations/CIT 261 Week 2 (Object Creation Functions, Inheritance, Properties, Methods, Instantiation).pdf"> Week 2: JavaScript Objects</a></li>
+            <li><a href="/CIT 261/Scripts/week2.html"> Week 2: JavaScript Objects</a></li>
             <br>
             <ul>
                 <li>Object Creation Functions</li>
