--- a/Scripts/resume.html
+++ b/Scripts/resume.html
@@ -34,7 +34,7 @@
       <main>
 
             
-            <object data="/Documents/BYU-I CS 308 Resume .pdf" type="application/pdf">
+            <object  width="600" height="600" align = "center " data="/Documents/BYU-I CS 308 Resume .pdf" type="application/pdf">
                 Your browser does not support pdfs, <a href="/Documents/BYU-I CS 308 Resume .pdf">click here to
                 download the file.</a>
               </object>
