--- a/CIT 261/Scripts/week6.html
+++ b/CIT 261/Scripts/week6.html
@@ -91,8 +91,8 @@
         
       <main>
 
-        <object width="800" height="500"  data="/CIT 261/Presentations/CCS3 Transitions .pdf" type="application/pdf">
-            Your browser does not support pdfs, <a href="/CIT 261/Presentations/CCS3 Transitions .pdf">click here to
+        <object width="800" height="500"  data="/CIT 261/Presentations/CCS3 Transitions  (1).pdf" type="application/pdf">
+            Your browser does not support pdfs, <a href="/CIT 261/Presentations/CCS3 Transitions  (1).pdf">click here to
             download the file.</a>
           </object>
 
