--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
         
       <main>
 
-            <div>My name is Laura Gibbs. I am a current student </div>
+        <div class="rcorners3">
+            <h2>About me</h2>
+            <p>My name is Laura Gibbs. I am currently junior student in Software Engineering at Brigham Young University. I am from Costa Rica but I live in Nashville, Tennnesse.  I am married and I don't have kids. I love to run and ride bike. I am very easygoing and friendly.</p>
+              <p> My goal is to get a bachelor's degree in Software Engineering and a bachelor's degree in Computer Information Technology. After I am done finish my degree, I would like to persuade a Master degree in Artificial Intelligence </p>
+          </div> 
 
     
 </main>
