--- a/CIT 261/Scripts/week8.html
+++ b/CIT 261/Scripts/week8.html
@@ -35,15 +35,15 @@
       <main>
 
 
-            <object width="600" height="600"  data="/CIT 261/Presentations/CIT 261 Week 2 (Object Creation Functions, Inheritance, Properties, Methods, Instantiation).pdf" type="application/pdf">
-                Your browser does not support pdfs, <a href="/CIT 261/Presentations/CIT 261 Week 2 (Object Creation Functions, Inheritance, Properties, Methods, Instantiation).pdf">click here to
+            <object width="600" height="600"  data="/CIT 261/Presentations/JSON Parse, Stringify.pdf" type="application/pdf">
+                Your browser does not support pdfs, <a href="/CIT 261/Presentations/JSON Parse, Stringify.pdf">click here to
                 download the file.</a>
               </object>
 
 
             <h1>Example 1</h1>
             <h2>Create Object from JSON String</h2>
-            <img src="/CIT 261/Images/JS_CSS.png" alt=" Create Object from JSON String code" width="125" height="125">
+            <img src="/CIT 261/Images/JSON Parse.png" alt=" Create Object from JSON String code" width="125" height="125">
 
 
 <p>Result </p>
@@ -60,7 +60,7 @@ document.getElementById("demo1").innerHTML ="My name is " + obj.name +  ". I am 
 <h1>Example 2</h1>
 <h2>Create JSON string from a JavaScript object.</h2>
 
-<img src="/CIT 261/Images/JS_CSS.png" alt=" Create Object from JSON String code" width="125" height="125">
+<img src="/CIT 261/Images/JSON stringify.png" alt=" Create Object from JSON String code" width="125" height="125">
 <p> Result</p>
 
 <p id="demo2"></p>
