--- a/CIT 261/Scripts/index.html
+++ b/CIT 261/Scripts/index.html
@@ -74,10 +74,10 @@
             </ul> 
             <br>
 
-            <li><a href="/CIT 261/Scripts/week7.html"> Week 7: CSS Animations </a></li>
+            <li><a href="/CIT 261/Scripts/week7.html"> Week 7: JSON </a></li>
             <br>
             <ul> 
-                <li>Designing, Defining, and Triggering CSS3 Animations without Custom Libraries (Thought Library)</li>
+                <li>JSON Parse, Stringify</li>
             </ul>
             <br>
             <li><a href="/CIT 261/Scripts/week8.html"> Week 8: CSS3 Transforms </a></li>
