--- a/CIT 261/Scripts/week9.html
+++ b/CIT 261/Scripts/week9.html
@@ -38,6 +38,9 @@
 
             <li><a href="https://www.quackit.com/json/tutorial/artists.txt"> JSON Data</a></li>
 
+            <li><a href="https://www.w3schools.com/js/js_ajax_http_response.asp"> The onreadystatechange Property</a></li>
+
+
             <!-- HTML generated using hilite.me --><div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%">{
   <span style="color: #BA2121">&quot;artists&quot;</span> <span style="color: #666666">:</span> [
   { 
