--- a/CIT 261/Scripts/week9.html
+++ b/CIT 261/Scripts/week9.html
@@ -36,6 +36,12 @@
             <h1>Use JSON to perform an HTTP request to retrieve data from a remote location</h1>
             <p>JSON is most commonly used in asynchronous HTTP requests. This is where an application pulls data from another application via an HTTP request on the web.</p> 
 
+            <h3>How Ajax Works</h3>
+
+            <img src="/CIT 261/Images/" alt=" CIT 261 Logo" width="125" height="125">
+
+
+
             <li><a href="https://www.quackit.com/json/tutorial/artists.txt"> JSON Data</a></li>
 
             <li><a href="https://www.w3schools.com/js/js_ajax_http_response.asp"> The onreadystatechange Property</a></li>
