--- a/CIT 261/Scripts/week9.html
+++ b/CIT 261/Scripts/week9.html
@@ -38,7 +38,7 @@
 
             <h3>How Ajax Works</h3>
 
-            <img src="/CIT 261/Images/AjaxWorks.gif" alt=" CIT 261 Logo" width="125" height="125">
+            <img src="/CIT 261/Images/AjaxWorks.gif" alt=" AJAX WORKS" width="350" height="350">
 
 
 
