--- a/CIT 261/Scripts/index.html
+++ b/CIT 261/Scripts/index.html
@@ -80,10 +80,10 @@
                 <li>JSON Parse, Stringify</li>
             </ul>
             <br>
-            <li><a href="/CIT 261/Scripts/week8.html"> Week 8: CSS3 Transforms </a></li>
+            <li><a href="/CIT 261/Scripts/week8.html"> Week 8: AJAX</a></li>
             <br>
             <ul>
-                <li>Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries (Thought Library)</li>
+                <li>Using XMLHTTPRequest to Consume a JSON Web Service</li>
             </ul>
             <br>
             <li><a href="/CIT 261/Scripts/week9.html"> Week 9: DOM Document Object Model</a></li>
@@ -95,12 +95,41 @@
                 <li>Remove Child</li>
             </ul>
             <br>
-            <li><a href="/CIT 261/Scripts/week10.html">Week 10: CSS3 Transitions <a></li>
+            <li><a href="/CIT 261/Scripts/week10.html">Week 10: JavaScript <a></li>
                 <br>
                 <ul>
-                    <li>JSON Parse</li>
-                    <li>Stringify</li>
+                    <li>Loops</li>
+                    <li>Conditional Statements</li>
+                    <li>Functions</li> 
+                    <li>Variables</li>
+                    <li>Parameters</li>
+                    <li>Arrays</li>
+                    <li>Associative Arrays</li>
                 </ul>
+
+                <li><a href="/CIT 261/Scripts/week11.html">Week 11: Local Storage <a></li>
+                    <br>
+                    <ul>
+                          Objects
+                        <li>Local Storage API</li>
+                        <li>Storing and Retrieving Simple Data</li>
+                        <li>Arrays</li> 
+                        <li>Associative Arrays/li>
+                        <li>Objects</li>
+                    </ul>
+
+                    <li><a href="/CIT 261/Scripts/week12.html">Week 12: CSS Animations <a></li>
+                        <br>
+                        <ul>
+                            <li>Designing, Defining, and Triggering CSS3 Animations without Custom Libraries (Thought Library)</li>
+                        </ul>
+
+
+                        <li><a href="/CIT 261/Scripts/week13.html">Week 13: HTML5 Tags for media <a></li>
+                            <br>
+                            <ul>
+                                <li>HTML5 Tags - Video, Audio, and Canvas</li>
+                            </ul>
                 <br>
                 <br>
                 <br>
