--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <!-- Custom style for this site -->
-    <link href="/Styles/Styles.css" rel="stylesheet">
+    <link href="/CIT 261/Styles/lesson5.css" rel="stylesheet">
 
         <img src="/Pictures/profile.jpg" alt=" Profile Picture" width="125" height="125">
         <h1> Laura Gibbs</h1>
