--- a/CIT 261/Scripts/week13.html
+++ b/CIT 261/Scripts/week13.html
@@ -13,7 +13,7 @@
     <link href="/Styles/Styles.css" rel="stylesheet">
 
     <img src="/CIT 261/Images/JS_CSS.png" alt=" Profile Picture" width="125" height="125">
-        <h1> Laura Gibbs</h1>
+        <h1>CIT 261 Mobile Application Development</h1>
     </header>
 
     
