--- a/CIT 261/Scripts/week10.html
+++ b/CIT 261/Scripts/week10.html
@@ -35,7 +35,7 @@
       <main>
 
 
-            <object width="600" height="600"  data="/CIT 261/Presentations/CIT 261 Week 2 (Object Creation Functions, Inheritance, Properties, Methods, Instantiation).pdf" type="application/pdf">
+            <object width="600" height="600"  data="/CIT 261/Presentations/CIT 261 JavaScript Array, loops....pdf" type="application/pdf">
                 Your browser does not support pdfs, <a href="/CIT 261/Presentations/CIT 261 JavaScript Array, loops....pdf">click here to
                 download the file.</a>
               </object>
