--- a/CIT 261/Scripts/week11.html
+++ b/CIT 261/Scripts/week11.html
@@ -32,8 +32,12 @@
         <body>
 
             <main>
+                    <object width="600" height="600"  data="/CIT 261/" type="application/pdf">
+                        Your browser does not support pdfs, <a href="/CIT 261/">click here to
+                        download the file.</a>
+                      </object>
 
-                <h3>Example #2</h3>
+                <h3>Example #1</h3>
                 <p>This example shows the storage of an array of Contact objects.  This shows both the storage and retrieval of that array.</p>
                 <h4>Contact Input</h4>
                     <form id="contactform">
