--- a/CIT 261/Scripts/week11.html
+++ b/CIT 261/Scripts/week11.html
@@ -32,8 +32,8 @@
         <body>
 
             <main>
-                    <object width="600" height="600"  data="/CIT 261/" type="application/pdf">
-                        Your browser does not support pdfs, <a href="/CIT 261/">click here to
+                    <object width="600" height="600"  data="/CIT 261/Presentations/Local Storage API.pdf" type="application/pdf">
+                        Your browser does not support pdfs, <a href="/CIT 261/Presentations/Local Storage API.pdf">click here to
                         download the file.</a>
                       </object>
 
