--- a/CIT 261/Scripts/week13.html
+++ b/CIT 261/Scripts/week13.html
@@ -26,6 +26,19 @@
                     </ul>      
             </nav>
 
+            <body>
+
+                <main>
+
+                        <object width="600" height="600"  data="/CIT 261/Presentations/" type="application/pdf">
+                            Your browser does not support pdfs, <a href="/CIT 261/Presentations/Local Storage API.pdf">click here to
+                            download the file.</a>
+                          </object>
+
+
+
+                </main>
+
             
 
     <footer>  © 2019 ★ <strong>CIT 261 Brigham Young University - Idaho </strong>★ Built by Laura Gibbs</p></footer>
