--- a/CIT 261/Scripts/index.html
+++ b/CIT 261/Scripts/index.html
@@ -130,6 +130,15 @@
                             <ul>
                                 <li>HTML5 Tags - Video, Audio, and Canvas</li>
                             </ul>
+
+                            <li><a href="/CIT 261/Scripts/week13.html">JOURNAL ENTRIES <a></li>
+                                <br>
+                                <ul>
+                                    <li>Journal Entries: Week 2 through week 14</li>
+                                </ul>
+
+
+                            
                 <br>
                 <br>
                 <br>
