--- a/CIT 261/Scripts/index.html
+++ b/CIT 261/Scripts/index.html
@@ -131,7 +131,7 @@
                                 <li>HTML5 Tags - Video, Audio, and Canvas</li>
                             </ul>
 
-                            <li><a href="/CIT 261/Scripts/week13.html">JOURNAL ENTRIES <a></li>
+                            <li><a href="/CIT 261/Scripts/journal.html">JOURNAL ENTRIES <a></li>
                                 <br>
                                 <ul>
                                     <li>Journal Entries: Week 2 through week 14</li>
