--- a/CIT 261/Scripts/week13.html
+++ b/CIT 261/Scripts/week13.html
@@ -98,3 +98,11 @@ v.addEventListener("ended", function() {clearInterval(i);}, false);
 
 </body>
 </html>
+
+
+<select id="Academicstandings" name="Academicstandings">
+    <option value="freshman">Freshman</option>
+    <option value="sophomore ">Sophomore</option>
+    <option value="junior">Junior</option>
+    <option value="senior">Senior</option>
+  </select>
