--- a/CIT 261/Scripts/index.html
+++ b/CIT 261/Scripts/index.html
@@ -140,6 +140,7 @@
                                     <li>Journal Entries: Week 2 through week 14</li>
                                 </ul>
                                 <br>
+                                <li><a href="/CIT 261/Scripts/finalProject.html">FINAL PROJECT<a></li>    
 
 
                             
